# grid_map

grid_map_demos/config/: image_to_gridmap_demo.yaml
grid_map_demos/scripts/: image_publisher.py
grid_map_rviz_plugin/src/: GridMapVisual.cpp
vi_grid_map_ros/: CMakeLists.txt  package.xml
vi_grid_map_ros/config/: image_to_vi_gridmap.yaml
vi_grid_map_ros/include/vi_grid_map_ros/: ImageToViGridmap.hpp
vi_grid_map_ros/src/: ImageToViGridmap.cpp  image_publisher.cpp  image_to_vi_gridmap_node.cpp
